Fixed width of cards on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ html {
 .header {
   width: 100%;
   height: 80px;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -162,11 +163,14 @@ html {
   justify-content: center;
   align-items: center;
   margin: 30px;
+  max-width: 400px;
+  width: 100%;
 }
 
 .cards h2 {
   font-weight: bold;
   margin-top: 30px;
+  text-align: center;
 }
 
 .cards p {
@@ -177,7 +181,8 @@ html {
 .cards__image {
   background-size: cover;
   background-position: center;
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   height: 300px;
 }
 
@@ -448,6 +453,10 @@ a {
 }
 
 @media only screen and (max-width: 720px) {
+  .cards {
+    margin: 30px 10px;
+    text-align: center;
+  }
   .banner > h1 {
     font-size: 48px;
   }
